--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,7 @@ button {
 	box-shadow: 0px 0px 10px 2px rgba(225, 223, 223, 0.2);
 	min-width: 90px;
 	justify-content: center;
+	transition: background-color 0.3s ease;
 }
 
 button:hover {
